force-app/main/default/classes/Controllers Apex/objects/Hospital__c/Hospital__c.object-meta.xml
<CustomObject>
    <label>Hospital</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Hospital Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>