force-app/main/default/classes/Controllers Apex/objects/Hospital__c/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <label>Disease</label>
    <length>50</length>
    <type>Text</type>
</CustomField>