force-app/main/default/classes/Controllers Apex/objects/Hospital__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>